[package]
name = "alias-ptr"
version = "0.1.1-pre"
edition = "2018"
description = "(Mostly) safe manually-freed shared pointers in Rust"
repository = "https://github.com/nyanpasu64/alias-ptr"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.release]
dev-version-ext = "pre"
